<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05"
        android:id="@+id/top"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05"
        android:id="@+id/start"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95"
        android:id="@+id/bottom"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95"
        android:id="@+id/end"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/start"
        app:layout_constraintEnd_toEndOf="@id/end"
        app:layout_constraintTop_toTopOf="@id/top"
        app:layout_constraintBottom_toTopOf="@id/save"
        android:layout_marginBottom="25dp"
        android:gravity="top"
        app:boxBackgroundMode="none"
        android:background="@drawable/edittext_background"
        android:paddingTop="5dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/note_et_hint"
            android:gravity="top"
            android:textColor="@color/gray" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/start"
        app:layout_constraintEnd_toEndOf="@id/end"
        app:layout_constraintBottom_toTopOf="@id/about"
        android:background="@drawable/button_green_background"
        android:layout_marginBottom="20dp"
        android:text="@string/save"
        android:elevation="10dp"
        android:translationZ="10dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/about"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/start"
        app:layout_constraintEnd_toEndOf="@id/end"
        app:layout_constraintBottom_toBottomOf="@id/bottom"
        android:background="@drawable/button_green_background"
        android:text="@string/about"
        android:elevation="10dp"
        android:translationZ="10dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>